--- a/dports/graphics/vtk5/Portfile
+++ b/dports/graphics/vtk5/Portfile
@@ -4,8 +4,7 @@
 PortSystem 1.0
 
 name        vtk5
-version     5.2.1
-revision    2
+version     5.6.0
 set branch  [join [lrange [split ${version} .] 0 1] .]
 categories  graphics devel
 maintainers nomaintainer
@@ -19,17 +18,15 @@ long_description    an open source, freely available software system  \
 homepage    http://www.vtk.org/
 platforms   darwin freebsd
 master_sites    http://www.vtk.org/files/release/${branch}/
-checksums vtk-${version}.tar.gz md5 d59520d5f6c49c8b4e3b9227e341b19f \
-          vtk-${version}.tar.gz sha1 e08ee5c9d738c2fe774fdb3111818b9899a7b751 \
-          vtk-${version}.tar.gz rmd160 c6cdee0c76e243d21d802690f138faab1c6eb863\
-      vtkdata-${version}.tar.gz md5 3cd99917ab1ec3ef369dd40db74b93b1 \
-      vtkdata-${version}.tar.gz sha1 a625f4934d0fbaad2242ae2bc920084775438933 \
-      vtkdata-${version}.tar.gz rmd160 5628fec27673d99426922dcd32b8d66a0d86c9ec
+
+distfiles           [suffix vtk-${version}]
+checksums           [suffix vtk-${version}] \
+                    md5     a56232baae6071f9f59f138d8f4620c2 \
+                    sha1    355209c485304f1b0feefcda3585d45217ffd230 \
+                    rmd160  b7abf3b9bb14a3db81608c7aa2721935ae653295
 
 depends_build   bin:cmake:cmake \
         port:readline
-distfiles   vtk-${version}.tar.gz \
-        vtkdata-${version}.tar.gz
 distname    VTK
 
 use_parallel_build yes
@@ -80,13 +77,13 @@ post-configure {
 build.env-append DYLD_LIBRARY_PATH=${worksrcpath}/bin
 
 if {![variant_isset carbon]} {
-    default_variants-append +x11 +tcltk
+    default_variants +x11 +tcltk
 }
-if {![variant_isset python26]} {
-    default_variants-append python25
+if {![variant_isset python25]} {
+    default_variants +python26
 }
 
-variant x11 conflicts carbon description {use X11} {
+variant x11 conflicts carbon description {Use X11} {
     depends_lib-append port:mesa port:Xft2 port:xorg-libXScrnSaver port:xorg-libXt
     configure.args-delete   -DVTK_USE_COCOA:BOOL=ON
     configure.args-append   \
@@ -96,7 +93,7 @@ variant x11 conflicts carbon description {use X11} {
         -DOPENGL_glu_LIBRARY:FILEPATH=${prefix}/lib/libGLU.dylib
 }
 
-variant tcltk conflicts carbon description {build with Tcl wrappers and Tk support} {
+variant tcltk conflicts carbon description {Build with Tcl wrappers and Tk support} {
     configure.args-delete \
         -DVTK_USE_TK:BOOL=OFF \
         -DVTK_WRAP_TCL:BOOL=OFF
@@ -117,7 +114,7 @@ variant carbon conflicts x11 tcltk description {Use Carbon.  Allows embedding VT
 }
 
 variant python requires python25 description {Compatibility variant, requires +python25} {}
-variant python25 description {builds python2.5 wrappers} conflicts python26 {
+variant python25 description {Build Python 2.5 wrappers} conflicts python26 {
     depends_build-append    port:python25
     configure.args-delete   \
         -DVTK_WRAP_PYTHON:BOOL=OFF
@@ -128,9 +125,13 @@ variant python25 description {builds python2.5 wrappers} conflicts python26 {
         -DPYTHON_LIBRARY:FILEPATH=${prefix}/lib/libpython2.5.dylib \
         -DVTK_WRAP_PYTHON:BOOL=ON \
         -DVTK_INSTALL_NO_PYTHON:BOOL=ON
+    post-destroot {
+        file mkdir ${destroot}${prefix}/lib/python2.5/site-packages
+        system "cd ${worksrcpath}/Wrapping/Python && ${prefix}/bin/python2.5 setup.py install --prefix=${prefix} --root=${destroot}"
+    }
 }
 
-variant python26 description {builds python2.6 wrappers} conflicts python25 {
+variant python26 description {Build Python 2.6 wrappers} conflicts python25 {
     depends_build-append    port:python26
     configure.args-delete   \
         -DVTK_WRAP_PYTHON:BOOL=OFF
@@ -141,31 +142,43 @@ variant python26 description {builds python2.6 wrappers} conflicts python25 {
         -DPYTHON_LIBRARY:FILEPATH=${prefix}/lib/libpython2.6.dylib \
         -DVTK_WRAP_PYTHON:BOOL=ON \
         -DVTK_INSTALL_NO_PYTHON:BOOL=ON
+    post-destroot {
+        system "cd ${worksrcpath}/Wrapping/Python && ${prefix}/bin/python2.6 setup.py install --prefix=${frameworks_dir}/Python.framework/Versions/2.6/ --root=${destroot}"
+    }
 }
-
 
 set vtkdest ${destroot}${prefix}/share/doc/${name}
 
+variant data description {Install data and examples} {
+    distfiles-append    [suffix vtkdata-${version}]
+    checksums-append    [suffix vtkdata-${version}] \
+                        md5     97006362d7d67dc01289daf3e4ec4e38 \
+                        sha1    e0aa26dafd653da1db21fc97ce15aa0599d9c5ad \
+                        rmd160  8499816f6d714408c0f7f584fb4d781f4426e444
+    post-destroot {
+        # Provide some examples
+        file copy ${worksrcpath}/Examples ${vtkdest}
+        xinstall -W ${worksrcpath}/bin \
+            CommonCxxTests \
+            FilteringCxxTests \
+            GenericFilteringCxxTests \
+            GraphicsCxxTests \
+            IOCxxTests \
+            ImagingCxxTests \
+            RenderingCxxTests \
+            TestCxxFeatures \
+            TestInstantiator \
+            VTKBenchMark \
+            VolumeRenderingCxxTests \
+            WidgetsCxxTests \
+            ${vtkdest}/Examples
+
+        # Provide data files
+        system "tar -C ${destroot}${prefix}/share -xzvf ${distpath}/[suffix vtkdata-${version}]"
+    }
+}
+
 post-destroot {
-    if {[variant_isset python25]} {
-        file mkdir ${destroot}${prefix}/lib/python2.5/site-packages
-        system "cd ${worksrcpath}/Wrapping/Python; ${prefix}/bin/python2.5 setup.py install --prefix=${prefix} --root=${destroot}"
-    }
-
-    if {[variant_isset python26]} {
-        system "cd ${worksrcpath}/Wrapping/Python; ${prefix}/bin/python2.6 setup.py install --prefix=${frameworks_dir}/Python.framework/Versions/2.6/ --root=${destroot}"
-    }
-
-    xinstall -d -m 0755 ${vtkdest}
-    file copy ${worksrcpath}/README.html ${vtkdest}
-    file copy ${worksrcpath}/Copyright.txt ${vtkdest}
-    file copy ${worksrcpath}/Testing.txt ${vtkdest}
-
-    # Provide some examples
-    file copy ${worksrcpath}/Examples ${vtkdest}
-    foreach x {CommonCxxTests FilteringCxxTests GenericFilteringCxxTests GraphicsCxxTests IOCxxTests} { file copy ${worksrcpath}/bin/$x ${vtkdest}/Examples }
-    foreach x {ImagingCxxTests RenderingCxxTests TestCxxFeatures TestInstantiator VTKBenchMark VolumeRenderingCxxTests WidgetsCxxTests} { file copy ${worksrcpath}/bin/$x ${vtkdest}/Examples }
-
-    # Provide data files
-    system "tar -C ${destroot}${prefix}/share -xzvf ${distpath}/vtkdata-${version}.tar.gz"
+    xinstall -d ${vtkdest}
+    xinstall -m 644 -W ${worksrcpath} Copyright.txt README.html Testing.txt ${vtkdest}
 }
