wxgtk cannot build universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@71030 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/wxgtk/Portfile
+++ b/dports/x11/wxgtk/Portfile
@@ -32,6 +32,9 @@ depends_lib     port:gtk2 \
 patchfiles      patch-Makefile.in \
                 patch-gsocket.diff
 
+# g++-4.2: -E, -S, -save-temps and -M options are not allowed with multiple -arch flags
+universal_variant no
+
 configure.args  --with-gtk --with-libpng --with-libjpeg --with-libtiff \
                 --with-freetype --with-zlib
 
