stdinchi-1: whitespace / formatting changes only
git-svn-id: https://svn.macports.org/repository/macports/trunk@71032 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/stdinchi-1/Portfile
+++ b/dports/science/stdinchi-1/Portfile
@@ -6,26 +6,28 @@ PortSystem          1.0
 name                stdinchi-1
 version             1.02
 categories          science
-maintainers         netatonce.net:petri \
-                    openmaintainer
-description         IUPAC InChI for standard InChI
-long_description    IUPAC utility for standard International Chemical Identifier \
-(InChI) non-proprietary identifiers for chemical substances.
-homepage            http://www.iupac.org/inchi/
 platforms           darwin
+maintainers         netatonce.net:petri openmaintainer
+
+description         IUPAC InChI for standard InChI
+
+long_description    IUPAC utility for standard International Chemical \
+                    Identifier (InChI) non-proprietary identifiers for \
+                    chemical substances.
+
+homepage            http://www.iupac.org/inchi/
 master_sites        http://www.iupac.org/inchi/download/
 distname            STDINCHI-1-API
 use_zip             yes
 
-checksums           md5 aa8bab9424a4c9683b63706c18d55479 \
-                    sha1 8545bc26004db435edc56e58c2f74d9b424c0e26 \
-                    rmd160 02381c995b837a9bfe2eceadf3b5b9f5d7328360
+checksums           md5     aa8bab9424a4c9683b63706c18d55479 \
+                    sha1    8545bc26004db435edc56e58c2f74d9b424c0e26 \
+                    rmd160  02381c995b837a9bfe2eceadf3b5b9f5d7328360
 
 use_configure       no
-build.args          -C STDINCHI/gcc_makefile/ -f makefile 
+build.args          -C STDINCHI/gcc_makefile/ -f makefile
 build.target        stdinchi-1
 
 destroot {
    xinstall -m 755 ${worksrcpath}/STDINCHI/gcc_makefile/stdinchi-1 ${destroot}${prefix}/bin/
 }
-
