remove useless uses of cat
git-svn-id: https://svn.macports.org/repository/macports/trunk@71035 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/base/doc/Makefile
+++ b/base/doc/Makefile
@@ -32,7 +32,7 @@ install: all
 	$(INSTALL) -d -o ${DSTUSR} -g ${DSTGRP} -m ${DSTMODE} ${INSTALLDIR}
 	$(INSTALL) -d -o ${DSTUSR} -g ${DSTGRP} -m ${DSTMODE} ${DESTDIR}${mpconfigdir}
 
-	cat prefix.mtree | $(MTREE) -U -e -p ${INSTALLDIR} > /dev/null
+	<prefix.mtree $(MTREE) -U -e -p ${INSTALLDIR} > /dev/null
 	if test -L "${INSTALLDIR}/man" ; then \
 		rm -f "${INSTALLDIR}/man"; \
 	fi
