--- a/base/src/port/Makefile
+++ b/base/src/port/Makefile
@@ -22,7 +22,7 @@ port: port.tcl ../../Mk/macports.autoconf.mk
 	${edit} port.tcl > $@
 
 mkdirs:
-	cat ../../doc/prefix.mtree | $(MTREE) -U -d -e -p ${INSTALLDIR} > /dev/null
+	<../../doc/prefix.mtree $(MTREE) -U -d -e -p ${INSTALLDIR} > /dev/null
 
 clean:
 	rm -f ${SCRIPTS}
