Disable universal variant in ports depending on wxgtk which is not universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@71036 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/codeblocks-devel/Portfile
+++ b/dports/devel/codeblocks-devel/Portfile
@@ -96,6 +96,8 @@ variant aqua conflicts x11 description "Use the wxMac port of wxWidgets" {
 }
 
 variant x11 description "Use the wxGTK port of wxWidgets" {
+	# wxgtk is not universal
+	universal_variant no
 	depends_lib port:wxgtk
 }
 
