--- a/dports/devel/wxstedit/Portfile
+++ b/dports/devel/wxstedit/Portfile
@@ -52,6 +52,8 @@ depends_lib		port:wxWidgets
 }
 
 variant x11 description "Use the wxGTK port of wxWidgets" {
+# wxgtk is not universal
+universal_variant	no
 depends_lib		port:wxgtk
 }
 
