--- a/dports/graphics/wxLua/Portfile
+++ b/dports/graphics/wxLua/Portfile
@@ -89,6 +89,9 @@ post-destroot {
 
 variant x11 description "Use the wxGTK port of wxWidgets" {
 
+# wxgtk is not universal
+universal_variant	no
+
 depends_lib-append	port:wxgtk
 
 }
