--- a/dports/x11/xchm/Portfile
+++ b/dports/x11/xchm/Portfile
@@ -20,3 +20,6 @@ master_sites		sourceforge
 checksums		md5 0f398af788a9e1a7c6f4e65b5ca31cf3
 
 depends_lib		path:bin/wx-config:wxgtk port:chmlib
+
+# wxgtk is not universal
+universal_variant	no
