tests: Always run tests from tests/ subdir when executing 'make test'
git-svn-id: https://svn.macports.org/repository/macports/trunk@71039 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/base/Makefile.in
+++ b/base/Makefile.in
@@ -1,7 +1,7 @@
 # $Id$
 
 PATH		= @PATH_CLEANED@
-SUBDIR		= doc src
+SUBDIR		= doc src tests
 DISTDIR		= dist
 DISTVER		=
 DISTTAG		= release_${subst .,_,${DISTVER}}
