tests/test/envvariables: Disable broken trace mode
git-svn-id: https://svn.macports.org/repository/macports/trunk@71042 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/base/tests/test/envvariables/Makefile
+++ b/base/tests/test/envvariables/Makefile
@@ -9,7 +9,7 @@ $(bindir)/port:
 test:
 	@PORTSRC=$(PORTSRC) $(bindir)/port clean > /dev/null
 	@sh -c "export ENVA=A ; export ENVB=B; \
-		export PORTSRC=$(PORTSRC); $(bindir)/port -t test" > output 2>&1 || (cat output; exit 1)
+		export PORTSRC=$(PORTSRC); $(bindir)/port test" > output 2>&1 || (cat output; exit 1)
 	@diff -u master output 2>&1 | tee difference
 	@if [ -s difference ]; then \
 		exit 1; \
