test/variants: platforms are no variants anymore, fix test
git-svn-id: https://svn.macports.org/repository/macports/trunk@71043 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/base/tests/test/variants/Portfile
+++ b/base/tests/test/variants/Portfile
@@ -31,12 +31,12 @@ variant universal {
 	puts "Universal Variant"
 }
 
-# We define the utopia platform twice
-platform utopia {
-	puts "Utopia platform -- 1"
+# We define the utopia variant twice
+variant utopia {
+	puts "Utopia variant -- 1"
 }
-platform utopia {
-	puts "Utopia platform -- 2"
+variant utopia {
+	puts "Utopia variant -- 2"
 }
 
 default_variants	+utopia
