audio/mpc fix broken livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@71047 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/mpc/Portfile
+++ b/dports/audio/mpc/Portfile
@@ -30,5 +30,5 @@ checksums           md5     9ab2967d9ec719b06a86f3b4121be654 \
 configure.args	 --mandir=${prefix}/share/man
 
 livecheck.type   regex
-livecheck.url    ${homepage}
-livecheck.regex "\/${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
+livecheck.url   http://sourceforge.net/projects/musicpd/files/${name}/
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
