--- a/dports/graphics/podofo/Portfile
+++ b/dports/graphics/podofo/Portfile
@@ -5,8 +5,7 @@ PortSystem      1.0
 PortGroup       cmake 1.0
 
 name            podofo
-version         0.8.0
-revision        1
+version         0.8.2
 categories      graphics
 maintainers     devans openmaintainer
 platforms       darwin
@@ -22,20 +21,15 @@ long_description \
     modify their contents into memory. The changes can be written back to disk easily. \
     The parser can also be used to extract information from a PDF file.
 
-checksums           md5     b73b4f2f3525a2dcd632f5e0054cab63 \
-                    sha1    67004f477040c19f8b08e8de5bd3d46eb20fa24a \
-                    rmd160  76a750ee530232feca5ece2c933cab486b9ab7a5
-
-## patchfiles      patch-src-CMakeLists.txt.diff
+checksums       md5     25d79f126a20680d69f95d33068f8599 \
+                sha1    5ae78c38f158e20e32e4ba7c1c21c0a85951c9bc \
+                rmd160  5eed3aae24bd224716c21f37921249013df61244
 
 depends_build   port:cmake
 
 depends_lib     port:fontconfig \
-                port:freetype \
-                port:jpeg \
                 port:libpng \
                 port:tiff \
-                port:zlib \
                 port:cppunit \
                 port:openssl \
                 port:lua
@@ -48,7 +42,13 @@ configure.args-append  -G \"Unix Makefiles\" \
                 -DCMAKE_INCLUDE_PATH=${prefix}/include/ \
                 -DCMAKE_LIBRARY_PATH=${prefix}/lib
 
-##                ${worksrcpath}
+#
+# FIXME: will build universal if there is no
+# previous non-universal build installed
+# but will not upgrade from non-universal
+# to universal (previously installed libraries
+# override newly built ones)
+#
 
 universal_variant no
 
