lang/ikarus-scheme-devel, devel/libpst, devel/nodejs, www/nodejuice: mgrimes retired 3 years ago http://trac.macports.org/wiki/MacPortsDevelopers?action=diff&version=50&old_version=49
git-svn-id: https://svn.macports.org/repository/macports/trunk@71051 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libpst/Portfile
+++ b/dports/devel/libpst/Portfile
@@ -5,7 +5,7 @@ name                libpst
 version             0.6.45
 categories          devel
 platforms           darwin
-maintainers         peculier.com:mgrimes
+maintainers         nomaintainer
 description         library to convert pst files to mbox and other formats
 long_description    library to convert pst files to mbox and other formats
 homepage            http://www.five-ten-sg.com/libpst/
