--- a/dports/devel/nodejs/Portfile
+++ b/dports/devel/nodejs/Portfile
@@ -7,7 +7,7 @@ name                    nodejs
 version                 0.2.0
 categories              devel net
 platforms               darwin
-maintainers             gmail.com:ceager mgrimes openmaintainer
+maintainers             gmail.com:ceager openmaintainer
 
 description             Evented I/O for V8 JavaScript
 
