--- a/dports/lang/ikarus-scheme-devel/Portfile
+++ b/dports/lang/ikarus-scheme-devel/Portfile
@@ -8,7 +8,7 @@ set my_name         ikarus-scheme
 version             r1870
 categories          lang
 platforms           darwin
-maintainers         mgrimes
+maintainers         nomaintainer
 license             GPL-3
 description         ikarus-scheme is a R6RS Scheme implementation
 long_description    Ikarus Scheme is a free optimizing incremental \
