--- a/dports/www/nodejuice/Portfile
+++ b/dports/www/nodejuice/Portfile
@@ -8,7 +8,7 @@ name                nodejuice
 version             1.5.0
 categories          www
 platforms           darwin
-maintainers         mgrimes
+maintainers         nomaintainer
 description         A web development tool to autorefesh the browser on changes.
 long_description    NodeJuice is a tool which allows you to develop with a \
                     push connection to your web browser. Automatic browser \
