lang/ruby19: fix #26269, uninstall error of .ri file with strange path
git-svn-id: https://svn.macports.org/repository/macports/trunk@71052 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/ruby19/Portfile
+++ b/dports/lang/ruby19/Portfile
@@ -4,7 +4,7 @@ PortSystem			1.0
 
 name				ruby19
 version				1.9.2-p0
-revision			1
+revision			2
 
 categories			lang ruby
 maintainers			kimuraw openmaintainer
@@ -43,6 +43,10 @@ configure.args		--enable-shared \
 					--without-tk \
 					--program-suffix=1.9 \
 					--with-rubylibprefix=${prefix}/lib/ruby1.9
+
+# #26969: .ri file with strage path
+#         patch from http://redmine.ruby-lang.org/issues/show/3759
+patchfiles-append	patch-bug26269.diff
 
 # Ignore minor version for archdir, like i686-darwin9.
 # Port "ruby" does the same.
