--- a/dports/science/grib_api/Portfile
+++ b/dports/science/grib_api/Portfile
@@ -4,8 +4,7 @@
 PortSystem          1.0
 
 name                grib_api
-version             1.8.0
-revision            2
+version             1.9.0
 platforms           darwin
 maintainers         takeshi
 license             LGPL
@@ -13,9 +12,9 @@ categories          science
 description         GRIB decoder
 homepage            http://www.ecmwf.int/products/data/software/grib_api.html
 master_sites        http://www.ecmwf.int/products/data/software/download/software_files/
-checksums           md5     7503794f2a849fc015c39ec42250653b \
-                    sha1    bbec9e62f46565808aed23bae88713946a0e7e8d \
-                    rmd160  eae9ed26a0735be0f95b651362384a3502d1647c
+checksums           md5     daa84dfd97e90f321281b200745185b2 \
+                    sha1    7bc1d54deecfc691892fb86742acd3f29162123e \
+                    rmd160  7501961311936526bc6207d4edb37f32f912010b
 long_description \
     The ECMWF GRIB API is an application program interface accessible \
     from C and FORTRAN programs developed for encoding and decoding   \
@@ -27,13 +26,14 @@ depends_lib         port:jasper \
                     port:libpng
 
 post-patch {
+    reinplace "s|share\/samples|share/$name/samples|" ${worksrcpath}/configure
+    reinplace "s|share\/definitions|share/$name/definitions|" ${worksrcpath}/configure
     foreach d {grib1 grib1_mlgrib2} {
-        reinplace "s|ifs_samples_${d}dir = \$(datadir)|ifs_samples_${d}dir = \$(pkgdatadir)|" ${worksrcpath}/ifs_samples/${d}/Makefile.in
+        reinplace "s|ifs_samples_${d}dir = ifs_samples/${d}|ifs_samples_${d}dir = \$(datadir)/${name}/ifs_samples/${d}|" ${worksrcpath}/ifs_samples/${d}/Makefile.in
     }
-    if [variant_isset g95] {
+    if {![variant_isset emos]} {
         reinplace "s|'none'|''|" ${worksrcpath}/configure
     }
-    reinplace "/grib_f_context_.et_real/d" ${worksrcpath}/fortran/grib_api_externals.h
 }
 
 configure.args      --disable-dependency-tracking \
@@ -54,29 +54,25 @@ post-destroot {
     }
 }
 
-if {![variant_isset g95] && ![variant_isset gcc43]} {
-    default_variants +gcc44
-}
-
 variant emos conflicts g95 description {conduct test using emos} {
+    depends_lib-append      port:emos
+    configure.args-append   --with-emos=-lemosR64
 }
 
 variant gcc43 conflicts g95 gcc44 description {builds fortran interface with gfortran 4.3} {
-    depends_build-append    port:gcc43 port:emos
+    depends_build-append    port:gcc43
     configure.args-delete   --disable-fortran
     configure.compiler      macports-gcc-4.3
     configure.args-append   --with-fortranlibdir=${prefix}/lib/gcc43 \
-                            --with-fortranlibs=-lgfortran \
-                            --with-emos=-lemosR64
+                            --with-fortranlibs=-lgfortran
 }
 
 variant gcc44 conflicts g95 gcc43 description {builds fortran interface with gfortran 4.4} {
-    depends_build-append    port:gcc44 port:emos
+    depends_build-append    port:gcc44
     configure.args-delete   --disable-fortran
     configure.compiler      macports-gcc-4.4
     configure.args-append   --with-fortranlibdir=${prefix}/lib/gcc44 \
-                            --with-fortranlibs=-lgfortran \
-                            --with-emos=-lemosR64
+                            --with-fortranlibs=-lgfortran
 }
 
 variant g95 conflicts gcc43 gcc44 emos universal description {builds fortran interface with g95} {
