magicspp: updated for 2.10.0. Fixed gcc43 and gcc44 variants
git-svn-id: https://svn.macports.org/repository/macports/trunk@71055 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/magicspp/Portfile
+++ b/dports/science/magicspp/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                magicspp
-version             2.8.0
+version             2.10.0
 platforms           darwin
 maintainers         takeshi
 license             Apache v2.0
@@ -13,9 +13,9 @@ description         ECMWF's Meteorological plotting software
 homepage            http://www.ecmwf.int/products/data/software/magics++.html
 master_sites        http://www.ecmwf.int/products/data/software/download/software_files/
 distname            Magics++-${version}
-checksums           md5     cf696eaa5d8075e32cc48b8107c43ffb \
-                    sha1    5b09244f6428895c38804402877a9447edf150f5 \
-                    rmd160  63ad953c40b469729483817f2525a1999a1753c8
+checksums           md5     6abfa2bd917073dc12e52f32ce215770 \
+                    sha1    75ad6aa2ee5533789e13ed79d2b4b6e952b72379 \
+                    rmd160  c4e72c984c8a7b119bd56a2aa9dd173360a83574
 long_description \
     Magics++ is the latest generation of the ECMWF's Meteorological plotting \
     software MAGICS (Meteorological Applications Graphics Integrated Colour System) \
@@ -59,6 +59,8 @@ post-patch {
 configure.env-append        LIBS=\"-lgrib_api -lopenjpeg -lpng\"
 configure.cppflags-append   -I${prefix}/include/freetype2/
 configure.args-append       --disable-dependency-tracking \
+                            --disable-qt \
+                            --disable-json \
                             --enable-cairo \
                             --enable-bufr \
                             --with-grib_api=${prefix} \
@@ -67,12 +69,12 @@ configure.args-append       --disable-dependency-tracking \
                             --with-gs-font-dir=${prefix}/share/ghostscript/fonts
 
 variant gcc43 conflicts gcc44 description {for emos +gcc43} {
-    configure.ldflags-append    -lgrib_api -lopenjpeg -lpng -lemosR64 -L${prefix}/lib/gcc43 -lgfortran -lnetcdf_c++ -lnetcdf
+    configure.ldflags-append    -lgrib_api -lopenjpeg -lpng -lemosR64 -lgfortran -lgfortranbegin -lnetcdf_c++ -lnetcdf
     configure.compiler      macports-gcc-4.3
 }
 
 variant gcc44 conflicts gcc43 description {for emos +gcc44} {
-    configure.ldflags-append    -lgrib_api -lopenjpeg -lpng -lemosR64 -L${prefix}/lib/gcc44 -lgfortran -lnetcdf_c++ -lnetcdf
+    configure.ldflags-append    -lgrib_api -lopenjpeg -lpng -lemosR64 -lgfortran -lgfortranbegin -lnetcdf_c++ -lnetcdf
     configure.compiler      macports-gcc-4.4
 }
 
