wireshark-devel: maintainer update to 1.4.0; see #26287
git-svn-id: https://svn.macports.org/repository/macports/trunk@71056 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/wireshark-devel/Portfile
+++ b/dports/net/wireshark-devel/Portfile
@@ -4,13 +4,15 @@
 PortSystem 1.0
 
 name            wireshark-devel
-version         1.4.0rc2
+epoch           1
+version         1.4.0
 categories      net
 maintainers     gmail.com:hsivank
 description     Graphical network analyzer and capture tool
 homepage        http://wireshark.org/
 platforms       darwin
 distname        wireshark-${version}
+dist_subdir     wireshark
 
 long_description A network analyzer that lets you capture and \
                  interactively browse Ethernet frames. \
@@ -22,9 +24,9 @@ master_sites    http://www.wireshark.org/download/src/ \
 
 use_bzip2       yes
 
-checksums       md5     2c79bdb62e44260898dd16c663343d95 \
-                sha1    592580662e0c868999d6643a24fc3b9841e05321 \
-                rmd160  cb20ccd71f5c8bf0abb4edd662306f82932efab7
+checksums       md5     13b188baea23cdad40b7a55921384a77 \
+                sha1    a1dc5fa6eff0320da5dad7ec9c8f3a8f5a18be81 \
+                rmd160  8eb683e1a1175a0386fc5f1262f0289af177d17c
 
 conflicts       wireshark
 
