php5-memcached: add igbinary variant; see #26289
git-svn-id: https://svn.macports.org/repository/macports/trunk@71057 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/php/php5-memcached/Portfile
+++ b/dports/php/php5-memcached/Portfile
@@ -24,3 +24,8 @@ depends_lib-append      port:libmemcached port:zlib
 
 configure.args-append   --with-libmemcached-dir=${prefix} \
                         --with-zlib-dir=${prefix}
+
+variant igbinary description {enable igbinary serialization extension} {
+    depends_lib-append      port:php5-igbinary
+    configure.args-append   --enable-memcached-igbinary
+}
