lftp: update to 4.0.9 (#26254), remove nls variant and always include natural language support, don't use a versioned documentation directory
git-svn-id: https://svn.macports.org/repository/macports/trunk@71058 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/lftp/Portfile
+++ b/dports/net/lftp/Portfile
@@ -3,8 +3,7 @@
 PortSystem          1.0
 
 name                lftp
-version             4.0.2
-revision            2
+version             4.0.9
 categories          net
 platforms           darwin
 maintainers         nomaintainer
@@ -25,11 +24,13 @@ master_sites        http://ftp.yars.free.net/pub/source/${name}/ \
                     http://ftp.yars.free.net/pub/source/${name}/old \
                     ftp://ftp.cs.tu-berlin.de/pub/net/ftp/${name}/
 use_bzip2           yes
-checksums           md5 437e657fd6470ef6d23d8a2ff67cc59c \
-                    sha1 abef8b229c49638167c4c53131618999adccd692 \
-                    rmd160 2321eef85b2f07de249f30bed87b6b6feeb74323
+
+checksums           md5     d3f0cd7569e31e50370208dd77a7c41b \
+                    sha1    86aba6fea67b4811cd5484e6816d2fd01068ef1f \
+                    rmd160  a5d08e0c00046ff2c2efd136378fee51a54566b9
 
 depends_lib         port:expat \
+                    port:gettext \
                     port:libiconv \
                     port:ncurses \
                     port:openssl \
@@ -37,7 +38,7 @@ depends_lib         port:expat \
 
 configure.args      --with-openssl \
                     --without-gnutls \
-                    --disable-nls
+                    --enable-nls
 
 pre-configure {
     # look for ncurses first
@@ -45,7 +46,7 @@ pre-configure {
 }
 
 post-destroot {
-    set docdir ${destroot}${prefix}/share/doc/${name}-${version}
+    set docdir ${destroot}${prefix}/share/doc/${name}
     xinstall -d ${docdir}
     xinstall -m 644 -W ${worksrcpath} AUTHORS BUGS ChangeLog COPYING FAQ FEATURES \
         NEWS README README.debug-levels README.modules MIRRORS THANKS TODO \
@@ -58,12 +59,6 @@ variant tls description {Use GnuTLS instead of OpenSSL} {
     configure.args-delete   --with-openssl --without-gnutls
     depends_lib-append      port:gnutls
     depends_lib-delete      port:openssl
-}
-
-variant nls description {Add internationalization support} {
-    configure.args-append   --enable-nls
-    configure.args-delete   --disable-nls
-    depends_lib-append      port:gettext
 }
 
 livecheck.type      regex
