py26-gobject, py26-gtk, py26-gnome: enable display of gtk-doc API documentation in devhelp
git-svn-id: https://svn.macports.org/repository/macports/trunk@71059 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-gobject/Portfile
+++ b/dports/python/py26-gobject/Portfile
@@ -7,6 +7,7 @@ name            py26-gobject
 platforms       darwin
 set my_name     pygobject
 version         2.21.3
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      python gnome
 maintainers     mcalhoun openmaintainer
@@ -52,6 +53,9 @@ post-destroot {
         ${destroot}${docdir}
     xinstall -d ${destroot}${prefix}/share/gtk-doc/html
     system "ln -s ${python_prefix}/share/${my_name} ${destroot}${prefix}/share/${my_name}26"
+# devhelp requires gtk-doc/html directory name  and .devhelp file name (less the .devhelp) to match
+    file rename ${destroot}${python_prefix}/share/gtk-doc/html/${my_name}/${my_name}.devhelp \
+                ${destroot}${python_prefix}/share/gtk-doc/html/${my_name}/${my_name}26.devhelp 
     system "ln -s ${python_prefix}/share/gtk-doc/html/${my_name} ${destroot}${prefix}/share/gtk-doc/html/${my_name}26"
 }
 
