--- a/dports/python/py26-gtk/Portfile
+++ b/dports/python/py26-gtk/Portfile
@@ -6,6 +6,7 @@ PortSystem      1.0
 name            py26-gtk
 set my_name     pygtk
 version         2.17.0
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      python x11
 platforms       darwin
@@ -56,6 +57,9 @@ post-destroot {
         ${destroot}${docdir}
     xinstall -d ${destroot}${prefix}/share/gtk-doc/html
     system "ln -s ${python_prefix}/share/${my_name} ${destroot}${prefix}/share/${my_name}26"
+# devhelp requires gtk-doc directory name  and .devhelp file name (less the .devhelp) to match
+    file rename ${destroot}${python_prefix}/share/gtk-doc/html/${my_name}/${my_name}.devhelp \
+                ${destroot}${python_prefix}/share/gtk-doc/html/${my_name}/${my_name}26.devhelp 
     system "ln -s ${python_prefix}/share/gtk-doc/html/${my_name} ${destroot}${prefix}/share/gtk-doc/html/${my_name}26"
 }
 
