--- a/dports/python/py26-gnome/Portfile
+++ b/dports/python/py26-gnome/Portfile
@@ -6,6 +6,7 @@ PortSystem 1.0
 name            py26-gnome
 set my_name     gnome-python
 version         2.28.1
+revision        1
 set branch      [join [lrange [split $version .] 0 1] .]
 categories      python gnome
 platforms       darwin
@@ -63,6 +64,15 @@ platform darwin 9 {
             ${worksrcpath}/gnomecanvas/Makefile.in \
             ${worksrcpath}/gnomevfs/Makefile.in
     }
+}
+
+post-destroot {
+# add link to gtk-doc in devhelp search path (${prefix}/share/gtk-doc/html/*)
+# devhelp requires gtk-doc/html directory name  and .devhelp file name (less the .devhelp) to match
+    file rename ${destroot}${python.prefix}/share/gtk-doc/html/pygnomevfs/pygnomevfs.devhelp \
+                ${destroot}${python.prefix}/share/gtk-doc/html/pygnomevfs/pygnomevfs26.devhelp 
+    xinstall -d ${destroot}${prefix}/share/gtk-doc/html
+    ln -s ${python.prefix}/share/gtk-doc/html/pygnomevfs ${destroot}${prefix}/share/gtk-doc/html/pygnomevfs26
 }
 
 livecheck.type  regex
