py26-gnome: remove description from +quartz variant which overrides global description, lint.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71060 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-gnome/Portfile
+++ b/dports/python/py26-gnome/Portfile
@@ -51,7 +51,7 @@ use_parallel_build  yes
 
 # fix an import error of bonobo.ui
 # when gtk quartz is in use
-variant quartz description {fix bonobo import error when gtk +quartz is used} {
+variant quartz {
 	patchfiles-append bonobo.diff
 }
 
@@ -70,7 +70,7 @@ post-destroot {
 # add link to gtk-doc in devhelp search path (${prefix}/share/gtk-doc/html/*)
 # devhelp requires gtk-doc/html directory name  and .devhelp file name (less the .devhelp) to match
     file rename ${destroot}${python.prefix}/share/gtk-doc/html/pygnomevfs/pygnomevfs.devhelp \
-                ${destroot}${python.prefix}/share/gtk-doc/html/pygnomevfs/pygnomevfs26.devhelp 
+                ${destroot}${python.prefix}/share/gtk-doc/html/pygnomevfs/pygnomevfs26.devhelp
     xinstall -d ${destroot}${prefix}/share/gtk-doc/html
     ln -s ${python.prefix}/share/gtk-doc/html/pygnomevfs ${destroot}${prefix}/share/gtk-doc/html/pygnomevfs26
 }
