--- a/dports/python/py26-pygtksourceview/Portfile
+++ b/dports/python/py26-pygtksourceview/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            py26-pygtksourceview
-version         2.6.0
+version         2.10.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      python x11
 platforms       darwin
@@ -16,9 +16,9 @@ homepage        http://www.gnome.org/
 master_sites    gnome:sources/pygtksourceview/${branch}/
 distname        pygtksourceview-${version}
 
-checksums       md5     069633ab8724ec5cfeaadace6e7f1317 \
-                sha1    0de3af1e0dfc2871c1065ee389c1e5253c504135 \
-                rmd160  f55634b12143175b4684f63e41f95d8853fd0992
+checksums       md5     7a4dd87a515374637e1acf0b340eaa92 \
+                sha1    fe4d3ce889427d5a5ae418415fc18f36b9b02524 \
+                rmd160  867b6986beec48538bf4aa8af8a566578d16085c
 
 depends_build   port:pkgconfig \
                 port:libxslt
@@ -37,6 +37,22 @@ platform darwin 9 {
     post-patch {
         reinplace "s| -export-symbols-regex.*||g" ${worksrcpath}/Makefile.in
     }
+}
+
+# install text docs in ${prefix}/share/doc/${name}
+# add link to gtk-doc in devhelp search path (${prefix}/share/gtk-doc/html/*)
+# devhelp requires gtk-doc/html directory name  and .devhelp file name (less the .devhelp) to match
+
+post-destroot {
+    set docdir ${prefix}/share/doc/${name}
+    xinstall -d ${destroot}${docdir}
+    xinstall -m 0644 -W ${worksrcpath} AUTHORS COPYING ChangeLog NEWS README \
+         ${destroot}${docdir}
+    xinstall -d ${destroot}${prefix}/share/gtk-doc/html
+    file rename ${destroot}${python_prefix}/share/gtk-doc/html/pygtksourceview2/pygtksourceview2.devhelp \
+                ${destroot}${python_prefix}/share/gtk-doc/html/pygtksourceview2/${name}.devhelp
+    ln -s ${python_prefix}/share/gtk-doc/html/pygtksourceview2 \
+          ${destroot}${prefix}/share/gtk-doc/html/${name}
 }
 
 livecheck.type  regex
