gedit: update to version 2.30.3, dependencies, configuration, use python26.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71062 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gedit/Portfile
+++ b/dports/gnome/gedit/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            gedit
-version         2.26.3
+version         2.30.3
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     GNOME editor.
 long_description \
@@ -15,40 +15,39 @@ platforms       darwin
 homepage        http://www.gnome.org/projects/gedit/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     0cdaad6b02af250c9c110010d0a708b2 \
-                sha1    57ee9519a1c28195fb5b5bafa06308d816246c53 \
-                rmd160  4248dbbaad3df23203654e8c3a70198bd25a5f3e
+checksums       md5     7c8ac5fe529285309f7d5750ee52b7bd \
+                sha1    c198bf088beb3cae6bee6fe91ef976cee250e688 \
+                rmd160  237b8d07fecf32030ff411806adcf21e234bfd87
 
-depends_build    \
-        port:p5-xml-parser \
-        port:gtk-doc \
-        port:intltool \
-        port:gnome-doc-utils
+depends_build   port:gtk-doc \
+                port:intltool \
+                port:gnome-doc-utils
 
-depends_lib    \
-        port:gtksourceview2 \
-        port:gconf \
-        port:py25-gobject \
-        port:py25-gtk \
-        port:py25-pygtksourceview \
-        port:iso-codes \
-        port:enchant \
-        port:policykit \
-        port:xorg-libsm
+depends_lib     port:gconf \
+                port:py26-pygtksourceview \
+                port:iso-codes \
+                port:enchant \
+                port:xorg-libsm
 
 use_bzip2       yes
 
-patchfiles      patch-configure.ac.diff \
-                patch-gedit-smclient-Makefile.am.diff
-
-use_autoreconf  yes
-autoreconf.args -vfi
+patchfiles      patch-configure.diff
 
 configure.args  --mandir=${prefix}/share/man \
                 --disable-scrollkeeper \
-                --disable-schemas-install
+                --disable-schemas-install \
+                --disable-gvfs-metadata \
+                --disable-updater
 
-configure.python ${prefix}/bin/python2.5
+configure.python ${prefix}/bin/python2.6
+set python_framework ${frameworks_dir}/Python.framework/Versions/2.6
+configure.pkg_config_path ${python_framework}/lib/pkgconfig
+
+#
+# py26-pygtksourceview -> py26-gtk -> py26-cairo -> py26-numpy -> atlas is not universal
+#
+
+universal_variant no
 
 variant no_x11 {
         depends_lib-delete  port:xorg-libsm
