gconf: patch Makefile.am so that glib.h can be found; fixes #25818
git-svn-id: https://svn.macports.org/repository/macports/trunk@71064 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gconf/Portfile
+++ b/dports/gnome/gconf/Portfile
@@ -38,6 +38,8 @@ depends_lib     port:gtk2 \
                 port:openssl \
                 port:orbit2
 
+patchfiles      patch-defaults-Makefile.am.diff
+
 configure.args  --without-openldap
 
 destroot.keepdirs \
