--- a/dports/graphics/Coin/Portfile
+++ b/dports/graphics/Coin/Portfile
@@ -4,6 +4,7 @@ PortSystem		1.0
 
 name			Coin
 version			3.1.3
+revision		1
 description		cross platform C++ OpenGL scene graph library
 long_description	Coin is a high-level 3D graphics library with a   \
 	C++ Application Programming Interface. Coin uses scene-graph data \
@@ -40,7 +41,7 @@ platform darwin {
 if {${os.platform} == "darwin"} {
 variant aqua {
 	configure.args-delete	--disable-framework --enable-darwin-x11
-	configure.args-append	--with-framework=${destroot}/Library/Frameworks  --without-x
+	configure.args-append	--with-framework-prefix=${destroot}${frameworks_dir} --without-x
 	depends_lib-delete	port:xorg-libsm \
 				port:xorg-libXext \
 				port:xorg-libXt
