--- a/dports/graphics/Coin/Portfile
+++ b/dports/graphics/Coin/Portfile
@@ -39,7 +39,7 @@ platform darwin {
 }
 
 if {${os.platform} == "darwin"} {
-variant aqua {
+variant aqua description {Install as a MacOS X framework without X11.} {
 	configure.args-delete	--disable-framework --enable-darwin-x11
 	configure.args-append	--with-framework-prefix=${destroot}${frameworks_dir} --without-x
 	depends_lib-delete	port:xorg-libsm \
