libjit: update to 0.1.2 (#26295)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71069 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libjit/Portfile
+++ b/dports/devel/libjit/Portfile
@@ -1,7 +1,9 @@
 # $Id$
+
 PortSystem 1.0
+
 name            libjit
-version         0.0.6
+version         0.1.2
 categories      devel
 maintainers     nomaintainer
 platforms       darwin
@@ -11,6 +13,10 @@ long_description        The libjit library has an extensive set of \
 			Just-In-Time compilation process, without tying \
 			the programmer down with language or bytecode \
 			specifics.
-master_sites    http://www.southern-storm.com.au/download
-checksums       sha1 4c235bddb0f24e00df2571d1da975e863d280f35
+# http://www.southern-storm.com.au/libjit.html seems to be down
+homepage        http://dotgnu.org/
+master_sites    gnu:dotgnu/libjit
+checksums       md5 9e0c1986da9a03ce68cfb3021bbc6701 \
+                sha1 8512d5cd72abbbc838a0c69488ff329b02171f81
+patchfiles      jit-apply-x86-64.h.diff
 configure.args  --infodir=${prefix}/share/info --mandir=${prefix}/share/man
