upgrade to 1.4.0, adjust configure args as needed
git-svn-id: https://svn.macports.org/repository/macports/trunk@71071 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/wireshark/Portfile
+++ b/dports/net/wireshark/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem 1.0
 name		wireshark
-version		1.2.11
+version		1.4.0
 revision	0
 categories	net
 maintainers	darkart.com:opendarwin.org
@@ -18,9 +18,9 @@ long_description A network analyzer that lets you capture and \
 master_sites	http://www.wireshark.org/download/src/			\
 		http://www.wireshark.org/download/src/all-versions/
 
-checksums           md5     2a10d31a57d1d4df69400f9373fa7f60 \
-                    sha1    ac8d845ccb8db3e9df6943e0f9a479f4016dac56 \
-                    rmd160  d52995b38495a78adf7212c9ec1aaa7b46bf839f
+checksums           md5     13b188baea23cdad40b7a55921384a77 \
+                    sha1    a1dc5fa6eff0320da5dad7ec9c8f3a8f5a18be81 \
+                    rmd160  8eb683e1a1175a0386fc5f1262f0289af177d17c
 
 use_bzip2	yes
 
@@ -34,7 +34,7 @@ depends_lib 		\
 		port:zlib \
 		port:xorg-inputproto
 
-configure.args	--enable-gtk2 \
+configure.args	\
 		--without-libsmi \
 		--disable-usr-local \
 		--without-adns \
@@ -47,7 +47,8 @@ configure.args	--enable-gtk2 \
 		--mandir=\\\${prefix}/share/man \
 		--infodir=\\\${prefix}/share/info \
 		--without-portaudio \
-		--disable-warnings-as-errors
+		--disable-warnings-as-errors \
+		--without-gnutls
 
 configure.ldflags-append "-Wl,-search_paths_first"
 
@@ -79,7 +80,7 @@ variant adns description {use adns library for async. dns resolution instead of 
 }
 
 variant gnutls {
-	configure.args-append	--with-libgnutls-prefix=${prefix}
+	configure.args-append	--with-gnutls=yes
 	depends_lib-append	port:gnutls
 }
 
