gtk2: configure to disable GObject introspection which otherwise autoconfigures if gobject-introspection is installed.  This causes the gtk2 build to break because the current version of pango does not generate introspection data.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71072 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/gtk2/Portfile
+++ b/dports/x11/gtk2/Portfile
@@ -55,6 +55,7 @@ archcheck.files \
 
 configure.args  --enable-static \
                 --disable-glibtest \
+                --disable-introspection \
                 gio_can_sniff=yes
 
 configure.ccache no
