--- a/dports/devel/libjit/Portfile
+++ b/dports/devel/libjit/Portfile
@@ -20,3 +20,6 @@ checksums       md5 9e0c1986da9a03ce68cfb3021bbc6701 \
                 sha1 8512d5cd72abbbc838a0c69488ff329b02171f81
 patchfiles      jit-apply-x86-64.h.diff
 configure.args  --infodir=${prefix}/share/info --mandir=${prefix}/share/man
+
+# checking for the native integer types... configure: error: unknown
+universal_variant       no
