libjit: add license info
git-svn-id: https://svn.macports.org/repository/macports/trunk@71075 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libjit/Portfile
+++ b/dports/devel/libjit/Portfile
@@ -7,6 +7,8 @@ version         0.1.2
 categories      devel
 maintainers     nomaintainer
 platforms       darwin
+license         LPGL-2.1
+
 description     A Just-In-Time library.
 long_description        The libjit library has an extensive set of \
 			routines that takes care of the bulk of the \
