wireshark-devel: incorporate changes from wireshark r71071
git-svn-id: https://svn.macports.org/repository/macports/trunk@71077 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/wireshark-devel/Portfile
+++ b/dports/net/wireshark-devel/Portfile
@@ -38,7 +38,7 @@ depends_lib     port:c-ares \
                 port:zlib \
                 port:xorg-inputproto
 
-configure.args  --enable-gtk2 \
+configure.args  \
                 --disable-usr-local \
                 --without-adns \
                 --with-c-ares=${prefix} \
@@ -51,6 +51,7 @@ configure.args  --enable-gtk2 \
                 --infodir=\\\${prefix}/share/info \
                 --without-portaudio \
                 --disable-warnings-as-errors \
+                --without-gnutls \
                 --enable-new-packet-list
 
 configure.ldflags-append "-Wl,-search_paths_first"
@@ -68,7 +69,7 @@ variant adns description {use adns library for async. dns resolution instead of 
 }
 
 variant gnutls {
-        configure.args-append   --with-libgnutls-prefix=${prefix}
+        configure.args-append   --with-gnutls=yes
         depends_lib-append      port:gnutls
 }
 
