mldonkey: update to 3.0.4; see #26292
git-svn-id: https://svn.macports.org/repository/macports/trunk@71078 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/mldonkey/Portfile
+++ b/dports/net/mldonkey/Portfile
@@ -3,8 +3,7 @@
 PortSystem 1.0
 
 name			mldonkey
-version			3.0.3
-revision		2
+version             3.0.4
 categories		net
 maintainers		nomaintainer
 description		OCaml/GTK client for the eDonkey p2p network
@@ -20,9 +19,12 @@ homepage		http://mldonkey.sourceforge.net/
 platforms		darwin
 master_sites	sourceforge
 
-checksums		md5     b5b5252fe60b5ec52396c9f58b7cb577 \
-				sha1    9187808cc318887e797469096f952a90759085c8 \
-				rmd160  f7a7668294252309d4dc68633ffbc32bdc76e14a
+checksums           md5     06a084874dfd99dbad4dabc21e986354 \
+                    sha1    8d9e32acdc4cda1a7ff0f09e06c76cd589691d3f \
+                    rmd160  e98e3319ed6099af0fb226402547e4407114c074
+
+patchfiles          patch-gui-guiHtml.diff \
+                    patch-gui-guiOptions.diff
 
 # ocaml is not universal
 universal_variant no
